example_yamls/partially_wrong_unit_directory/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-qa
  labels:
    project: demo
