example_yamls/partially_wrong_unit_directory/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo-qa
spec:
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 443
  selector:
    project: demo
    app: hello-world-web
