example_yamls/partially_wrong_unit_directory/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: demo-qa
spec:
  ingress: []
  podSelector: {}
