example_yamls/partially_wrong_unit_directory/NetworkPolicy1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world-web
  namespace: demo-qa
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app: hello-world-web
